# backend/models/lugar.go
@@ -15,3 +15,11 @@ type RelationVisitaLugar struct {
 	Rating    int    `json:"rating"`    // Rating Calificación del lugar por el usuario
 	Categoria string `json:"categoria"` // Categoria Categoria del lugar
 }
+
+type RelationNoLeGustaLugar struct {
+	Usuario   string `json:"usuario"`   // Usuario Nombre de usuario
+	Lugar     string `json:"lugar"`     // Lugar Nombre del lugar
+	Cuando    string `json:"cuando"`    // Cuando Fecha en la que el usuario visitó el lugar
+	Rating    int    `json:"rating"`    // Rating Calificación del lugar por el usuario
+	Categoria string `json:"categoria"` // Categoria Categoria del lugar
+}
